<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="24dp"
    android:textDirection="rtl">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvCourtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/assistant_bold"
        android:text="@string/court_name_placeholder"
        android:textColor="@color/textOnP"
        android:textSize="30sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvCourtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/assistant"
        android:text="@string/court_desc_placeholder"
        android:textColor="@color/textOnP"
        android:textSize="22sp" />

    <View
        android:id="@+id/horizontalSep1"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:alpha="0.5"
        android:background="@android:color/darker_gray" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvAddFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/assistant_semibold"
        android:text="@string/court_title_placholder"
        android:textColor="@color/textOnP"
        android:textSize="24sp" />

    <SearchView
        android:id="@+id/svFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        android:queryHint="חפש חברים"
        android:textDirection="inherit" />

    <ListView
        android:id="@+id/lvParticipations"
        android:layout_width="match_parent"
        android:layout_height="194dp"
        android:layout_marginBottom="15dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/cancelBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/assistant_semibold"
            android:text="@string/cancel"
            android:textColor="@color/textOnP" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/submitBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/assistant_semibold"
            android:text="@string/order"
            android:textColor="@color/textOnP" />

    </LinearLayout>
</LinearLayout>