<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="192dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/app_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ramash" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabNavigate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"
        app:layout_anchor="@+id/appbar"
        app:layout_anchorGravity="left|bottom"
        app:srcCompat="@drawable/ic_action_name" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            android:padding="24dp"
            android:textDirection="rtl">

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/tvCourtName"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:fontFamily="@font/assistant_bold"
                            android:text="@string/court_name_placeholder"
                            android:textColor="@color/textOnP"
                            android:textSize="30sp" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/tvCourtDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/assistant"
                            android:text="@string/court_desc_placeholder"
                            android:textColor="@color/textOnP"
                            android:textSize="22sp" />

                        <View
                            android:id="@+id/divCreateMatchTitle"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"
                            android:alpha="0.5"
                            android:background="@android:color/darker_gray" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/tvSelectTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:fontFamily="@font/assistant_semibold"
                            android:text="@string/select_time"
                            android:textColor="@color/textOnP"
                            android:textSize="24sp" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <Spinner
                                android:id="@+id/spnrMatchTime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_weight="1"
                                android:dropDownWidth="wrap_content" />

                            <TextView
                                android:id="@+id/tvMatchDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:layout_weight="1"
                                android:gravity="start"
                                android:layoutDirection="ltr"
                                android:text="TextView"
                                android:textColor="@color/textOnP"
                                android:textDirection="ltr"
                                android:textSize="18sp" />

                        </LinearLayout>

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/tvAddFriends"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:fontFamily="@font/assistant_semibold"
                            android:text="@string/court_title_placholder"
                            android:textColor="@color/textOnP"
                            android:textSize="24sp" />

                        <View
                            android:id="@+id/divCreateMatchTime"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"
                            android:alpha="0.5"
                            android:background="@android:color/darker_gray" />

                        <ListView
                            android:id="@+id/lvParticipations"
                            android:layout_width="match_parent"
                            android:layout_height="150dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <AutoCompleteTextView
                                android:id="@+id/actvSearchFriends"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="@string/search_friends"
                                android:layoutDirection="rtl"
                                android:textDirection="rtl" />

                            <Button
                                android:id="@+id/btnAddFriend"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:backgroundTint="@color/colorPrimary"
                                android:text="+" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="32dp"
                            android:orientation="horizontal">

                            <android.support.v7.widget.AppCompatButton
                                android:id="@+id/cancelBtn"
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="1"
                                android:backgroundTint="@color/colorPrimary"
                                android:fontFamily="@font/assistant_semibold"
                                android:text="@string/cancel"
                                android:textColor="@color/textOnP" />

                            <android.support.v7.widget.AppCompatButton
                                android:id="@+id/submitBtn"
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="1"
                                android:backgroundTint="@color/colorPrimary"
                                android:fontFamily="@font/assistant_semibold"
                                android:text="@string/order"
                                android:textColor="@color/textOnP" />

                        </LinearLayout>
                    </LinearLayout>
                </android.support.v4.widget.NestedScrollView>

            </android.support.design.widget.CoordinatorLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>

